Change text color

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="col-12 col-md-7">
                         <div class="welcome-intro">
                             <span class="d-inline-block text-capitalize font-italic fw-3 mb-2">King Pumpkin</span>
-                            <h1 class="text-capitalize">Fall in <span class="fw-3"> Love </span> with <span class="fw-3"> Pumpkin</span>&nbsp;...</h1>
+                            <h1 class="text-capitalize">Fall in <span class="fw-3"> Love </span> with <span class="fw-3" style="color: #da5200;"> Pumpkin</span>&nbsp;...</h1>
                             <p class="my-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
