--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -25,7 +26,8 @@
                 <defs>
                     <filter id="goo" x="-40%" y="-40%" height="200%" width="400%">
                         <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -8" result="goo" />
+                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -8"
+                            result="goo" />
                     </filter>
                 </defs>
                 <g filter="url(#goo)">
@@ -51,22 +53,27 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular mt-4" src="assets/img/logo/king-pumpkin-logo.png" alt="brand-logo" width="150px">
-                    <img class="navbar-brand-sticky" src="assets/img/logo/king-pumpkin-logo.png" alt="sticky brand-logo" width="100px">
+                    <img class="navbar-brand-regular mt-4" src="assets/img/logo/king-pumpkin-logo.png" alt="brand-logo"
+                        width="150px">
+                    <img class="navbar-brand-sticky" src="assets/img/logo/king-pumpkin-logo.png" alt="sticky brand-logo"
+                        width="100px">
                 </a>
-                <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="navbar-inner">
                     <!--  Mobile Menu Toggler -->
-                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
+                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdownMenuLink"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Home
                                 </a>
                             </li>
@@ -100,8 +107,11 @@
                     <div class="col-12 col-md-7">
                         <div class="welcome-intro">
                             <span class="d-inline-block text-capitalize font-italic fw-3 mb-2">King Pumpkin</span>
-                            <h1 class="text-capitalize">Fall in <span class="fw-3"> Love </span> with <span class="fw-3" style="color: #da5200;"> Pumpkin</span>&nbsp;...</h1>
-                            <p class="my-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <h1 class="text-capitalize">Fall in <span class="fw-3"> Love </span> with <span class="fw-3"
+                                    style="color: #da5200;"> Pumpkin</span>&nbsp;...</h1>
+                            <p class="my-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                                doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                                quasi architecto beatae vitae dicta sunt explicabo.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <!-- <a class="btn prolend-primary style-two" href="#">Learn More</a> -->
@@ -125,9 +135,10 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4 res-margin">
                         <div class="image-box product-card overflow-hidden">
-                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_jam.png" alt="" style="max-height: 352px;">
+                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_jam.png" alt=""
+                                style="max-height: 352px;">
                             <div class="card-body p-4">
-                                <h1 class="text-center" style="color: #da5200;">Pumpkin Jam</h1>
+                                <h1 class="text-center"><span style="color: #da5200;">Pumpkin</span> Jam</h1>
                                 <!-- <ul>
                                     <li>High-Resolution Audio compatible</li>
                                     <li>Smart listening experience by Adaptive Sound Control</li>
@@ -146,9 +157,10 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 res-margin">
                         <div class="image-box product-card overflow-hidden">
-                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_chips.png" alt="" style="max-height: 352px;">
+                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_chips.png" alt=""
+                                style="max-height: 352px;">
                             <div class="card-body p-4">
-                                <h1 class="text-center" style="color: #da5200;">Pumpkin Chips</h1>
+                                <h1 class="text-center"><span style="color: #da5200;">Pumpkin</span> Chips</h1>
                                 <!-- <ul>
                                     <li>High-Resolution Audio compatible</li>
                                     <li>Smart listening experience by Adaptive Sound Control</li>
@@ -167,9 +179,10 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="image-box product-card overflow-hidden">
-                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_cake.png" alt="" style="max-height: 352px;">
+                            <img class="d-block w-100" src="assets/img/product-thumb/pumpkin_cake.png" alt=""
+                                style="max-height: 352px;">
                             <div class="card-body p-4">
-                                <h1 class="text-center" style="color: #da5200;">Pumpkin Cake</h1>
+                                <h1 class="text-center"><span style="color: #da5200;">Pumpkin</span> Cake</h1>
                                 <!-- <ul>
                                     <li>High-Resolution Audio compatible</li>
                                     <li>Smart listening experience by Adaptive Sound Control</li>
@@ -191,7 +204,120 @@
         </section>
         <!-- ***** Promo Area End ***** -->
 
-       
+        <!--====== Footer Area Start ======-->
+        <footer class="footer-area dark-bg">
+            <!-- Footer Top -->
+            <div class="footer-top ptb_100">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <!-- Footer Items -->
+                            <div class="footer-items">
+                                <!-- Logo -->
+                                <a class="navbar-brand" href="#">
+                                    <img class="logo" src="assets/img/logo/king-pumpkin-logo.png" width="100px" alt="">
+                                </a>
+                                <p class="mt-2 mb-3">Fall in Love with Pumpkin.</p>
+                                <!-- Social Icons -->
+                                <div class="social-icons d-flex">
+                                    <a class="facebook" href="#">
+                                        <i class="fab fa-facebook-f"></i>
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                    <a class="twitter" href="#">
+                                        <i class="fab fa-twitter"></i>
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a class="google-plus" href="#">
+                                        <i class="fab fa-google-plus-g"></i>
+                                        <i class="fab fa-google-plus-g"></i>
+                                    </a>
+                                    <a class="vine" href="#">
+                                        <i class="fab fa-vine"></i>
+                                        <i class="fab fa-vine"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <!-- Footer Items -->
+                            <div class="footer-items">
+                                <!-- Footer Title -->
+                                <h3 class="footer-title mb-2">Company</h3>
+                                <ul>
+                                    <li class="py-2"><a href="#">About Us</a></li>
+                                    <li class="py-2"><a href="#">Our Services</a></li>
+                                    <li class="py-2"><a href="#">Products</a></li>
+                                    <li class="py-2"><a href="#">Contact Us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <!-- Footer Items -->
+                            <div class="footer-items">
+                                <!-- Footer Title -->
+                                <h3 class="footer-title mb-2">Support</h3>
+                                <ul>
+                                    <li class="py-2"><a href="#">Legal Information</a></li>
+                                    <li class="py-2"><a href="#">Privacy Policy</a></li>
+                                    <li class="py-2"><a href="#">Terms &amp; Conditions</a></li>
+                                    <li class="py-2"><a href="#">Report Abuse</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-3">
+                            <!-- Footer Items -->
+                            <div class="footer-items">
+                                <!-- Footer Title -->
+                                <h3 class="footer-title mb-2">Get In touch</h3>
+                                <ul>
+                                    <li class="py-2">
+                                        <a class="media" href="#">
+                                            <div class="social-icon mr-3">
+                                                <i class="fas fa-home"></i>
+                                            </div>
+                                            <span class="media-body align-self-center">No:144, High level road, Maharagama.</span>
+                                        </a>
+                                    </li>
+                                    <li class="py-2">
+                                        <a class="media" href="#">
+                                            <div class="social-icon mr-3">
+                                                <i class="fas fa-phone-alt"></i>
+                                            </div>
+                                            <span class="media-body align-self-center">0114323453 | 0712233445</span>
+                                        </a>
+                                    </li>
+                                    <!-- Subscribe Form -->
+                                    <div class="subscribe-form d-flex align-items-center mt-3">
+                                        <input type="email" class="form-control" placeholder="Enter Email">
+                                        <button type="submit" class="btn btn-yellow"><i
+                                                class="fas fa-location-arrow"></i></button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Footer Bottom -->
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <!-- Copyright Area -->
+                            <div
+                                class="copyright-area d-flex flex-wrap justify-content-center justify-content-sm-between text-center py-4">
+                                <!-- Copyright Left -->
+                                <div class="copyright-left">&copy; Copyrights 2020 King Pumpkin All rights reserved.</div>
+                                <!-- Copyright Right -->
+                                <div class="copyright-right">Made with <i class="fas fa-heart"></i> By <a href="#">King Pumpkin</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <!--====== Footer Area End ======-->
     </div>
 
