--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -180,7 +180,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url('assets/img/bg/pumpkin-bg.JPG');">
     <!--====== Preloader Area Start ======-->
     <div class="preloader-main">
         <div class="preloader-wapper">
