--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
                             <span class="d-inline-block text-capitalize font-italic fw-3 mb-2">King Pumpkin</span>
                             <h1 class="text-capitalize">Fall in <span class="fw-3"> Love </span> with <span class="fw-3"
                                     style="color: #da5200;"> Pumpkin</span>&nbsp;...</h1>
-                            <p class="my-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <p class="my-4">"King Pumpkin" offers natural and healthy products without artificial preservations at a reasonable price. Buy and get an unique experience..</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <!-- <a class="btn prolend-primary style-two" href="#">Learn More</a> -->
@@ -128,7 +126,7 @@
         <!-- ***** Welcome Area End ***** -->
 
         <!-- ***** Promo Area Start ***** -->
-        <section id="products" class="section promo-area products-area overflow-hidden ptb_100 pt-lg-4">
+        <section style="background-image: url('assets/img/bg/pumpkin-bg.JPG');   background-size: auto 250vh;" id="products" class="section promo-area products-area overflow-hidden ptb_100 pt-lg-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4 res-margin">
