--- a/pumpkin-chips.html
+++ b/pumpkin-chips.html
@@ -234,22 +234,22 @@
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdownMenuLink"
+                                <a class="nav-link dropdown-toggle text-dark font-weight-bold" href="index.html" id="navbarDropdownMenuLink"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#products">Products</a>
+                                <a class="nav-link scroll text-dark font-weight-bold" href="#products">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#pricing">Pricing</a>
+                                <a class="nav-link scroll text-dark font-weight-bold" href="#pricing">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#screenshots">About Us</a>
+                                <a class="nav-link scroll text-dark font-weight-bold" href="#screenshots">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#contact">Contact</a>
+                                <a class="nav-link scroll text-dark font-weight-bold" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
