--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -233,23 +233,22 @@
                     </button>
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-dark" href="index.html" id="navbarDropdownMenuLink"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="index.html">
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll text-dark" href="#products">Products</a>
+                                <a class="nav-link text-dark" href="index.html#about">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll text-dark" href="#pricing">Pricing</a>
+                                <a class="nav-link text-dark" href="index.html#products">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll text-dark" href="#screenshots">About Us</a>
+                                <a class="nav-link text-dark" href="#">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll text-dark" href="#contact">Contact</a>
+                                <a class="nav-link text-dark" href="index.html#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -294,7 +293,7 @@
                             <p class="product-description">King Pumpkin jam tastes more than other jam due to the sweetness of pumpkin with lemon and ginger. You can start your day with more delicious and healthy
                                 breakfast with pumpkin jam. So this is the perfect jam to have for your breakfast.</p>
                             <h4 class="price">Price: <span>Rs. 220.00</span></h4>
-                            <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+                          
                                 <br>
                             <div class="action">
                                 <button class="add-to-cart btn btn-default" type="button">add to cart</button>
