--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -268,12 +268,12 @@
                               <div class="tab-pane" id="pic-2"><img src="assets/img/product-thumb/jam.jpeg" /></div>
                               <div class="tab-pane" id="pic-3"><img src="assets/img/product-thumb/pumpkin_jam.png" /></div>
                               <div class="tab-pane" id="pic-4"><img src="assets/img/product-thumb/jam2.jpeg" /></div>
-                              <!-- <div class="tab-pane" id="pic-5"><img src="http://placekitten.com/400/252" /></div> -->
+                              <div class="tab-pane" id="pic-5"><img src="assets/img/product-thumb/jam.jpeg" /></div>
                             </div>
                             <ul class="preview-thumbnail nav nav-tabs">
                               <li><a data-target="#pic-2" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
                               <li><a data-target="#pic-3" data-toggle="tab"><img src="assets/img/product-thumb/jam.jpeg" /></a></li>
-                              <li><a data-target="#pic-5" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
+                              <li><a data-target="#pic-4" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
                               <li><a data-target="#pic-5" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
                             </ul>
                             
