--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -272,7 +272,7 @@
                             </div>
                             <ul class="preview-thumbnail nav nav-tabs">
                               <li><a data-target="#pic-2" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
-                              <li><a data-target="#pic-3" data-toggle="tab"><img src="assets/img/product-thumb/jam.jpeg" /></a></li>
+                              <li><a data-target="#pic-3" data-toggle="tab"><img src="assets/img/product-thumb/pumpkin_jam.png" /></a></li>
                               <li><a data-target="#pic-4" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
                               <li><a data-target="#pic-5" data-toggle="tab"><img src="assets/img/product-thumb/jam2.jpeg" /></a></li>
                             </ul>
