Add Google map and payment method

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                     <div class="col-12 col-md-7">
                         <div class="welcome-intro">
                             <span class="d-inline-block text-capitalize font-italic fw-3 mb-2">King Pumpkin</span>
-                            <h1 style="font-size: 4em;font-weight: 600;line-height: 1.2;" class="text-capitalize">Fall in <span class="fw-3"> Love </span> with
+                            <h1 style="font-size: 4em;font-weight: 600;line-height: 1.2;" class="text-capitalize">Fall
+                                in <span class="fw-3"> Love </span> with
                                 <span class="fw-3" style="color: #da5200;"> Pumpkin</span>&nbsp;...</h1>
                             <p class="my-4">"King Pumpkin" offers natural and healthy products without artificial
                                 preservations at a reasonable price. Buy and get an unique experience..</p>
@@ -243,8 +244,7 @@
                             <p style="font-size: 16px; margin-top: 10px;" class="text-justify mb-4">"To help people
                                 enjoy life by offering an delicious food with full of healthcare."</p>
 
-                            <h3 style="font-size: 28px; margin-top: 50px;"
-                                class="text-center">Our Mission</h3>
+                            <h3 style="font-size: 28px; margin-top: 50px;" class="text-center">Our Mission</h3>
                             <p style="font-size: 16px; margin-top: 10px;" class="text-justify">"To be recognized as a
                                 leading distinctive brand of fresh, homemade, quality pumpkin food varieties offered to
                                 customers at the reasonable, affordable price, for a healthier, refreshing, filling and
@@ -322,6 +322,16 @@
                             <p class="form-message"></p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="map" class="contact-area ptb_100">
+            <div class="container-fluid">
+                <div class="map-responsive">
+                    <iframe
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
+                        width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
