--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -293,7 +293,7 @@
                           
                                 <br>
                             <div class="action">
-                                <button class="add-to-cart btn btn-default" type="button">add to cart</button>
+                                <button class="add-to-cart btn btn-default" onclick="payment()" type="button">Buy It</button>
                                 <button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
                             </div>
                         </div>
@@ -301,6 +301,12 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            function payment() {
+            window.location.href = "payment.html";
+            }
+        </script>
 
         <!--====== Footer Area Start ======-->
         <footer class="footer-area dark-bg">
