Reduce header space

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </section>
         <!-- ***** Welcome Area End ***** -->
 
-        <section class="section discover-area overflow-hidden ptb_50" id="about">
+        <section class="section discover-area overflow-hidden" style="padding-bottom: 50px;" id="about">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-12 col-lg-6 order-2 order-lg-1">
@@ -376,10 +376,10 @@
                                 <!-- Footer Title -->
                                 <h3 class="footer-title mb-2">Company</h3>
                                 <ul>
-                                    <li class="py-2"><a href="#">About Us</a></li>
-                                    <li class="py-2"><a href="#">Our Services</a></li>
-                                    <li class="py-2"><a href="#">Products</a></li>
-                                    <li class="py-2"><a href="#">Contact Us</a></li>
+                                    <li class="py-2"><a href="index.html">Home</a></li>
+                                    <li class="py-2"><a href="#about">About Us</a></li>
+                                    <li class="py-2"><a href="#products">Products</a></li>
+                                    <li class="py-2"><a href="#contact">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
