--- a/pumpkin-cake.html
+++ b/pumpkin-cake.html
@@ -343,10 +343,10 @@
                                 <!-- Footer Title -->
                                 <h3 class="footer-title mb-2">Company</h3>
                                 <ul>
-                                    <li class="py-2"><a href="#">About Us</a></li>
-                                    <li class="py-2"><a href="#">Our Services</a></li>
-                                    <li class="py-2"><a href="#">Products</a></li>
-                                    <li class="py-2"><a href="#">Contact Us</a></li>
+                                    <li class="py-2"><a href="index.html">Home</a></li>
+                                    <li class="py-2"><a href="index.html#about">About Us</a></li>
+                                    <li class="py-2"><a href="index.html#products">Products</a></li>
+                                    <li class="py-2"><a href="index.html#contact">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
