--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
                     <img class="navbar-brand-regular mt-4" src="assets/img/logo/king-pumpkin-logo.png" alt="brand-logo"
-                        width="150px">
+                        width="200px">
                     <img class="navbar-brand-sticky" src="assets/img/logo/king-pumpkin-logo.png" alt="sticky brand-logo"
                         width="100px">
                 </a>
@@ -74,19 +74,19 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <ul class="navbar-nav mr-auto" id="navbar-nav">
                             <li class="nav-item Active">
-                                <a style="color:#2f2f2f;" class="nav-link scroll" href="index.html">
+                                <a style="color:#2f2f2f;" class="nav-link scroll font-weight-bold" href="index.html">
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a style="color:#2f2f2f;" class="nav-link scroll" href="index.html#about">About Us</a>
+                                <a style="color:#2f2f2f;" class="nav-link scroll font-weight-bold" href="index.html#about">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a style="color:#2f2f2f;" class="nav-link scroll"
+                                <a style="color:#2f2f2f;" class="nav-link scroll font-weight-bold"
                                     href="index.html#products">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a style="color:#2f2f2f;" class="nav-link scroll" href="index.html#contact">Contact</a>
+                                <a style="color:#2f2f2f;" class="nav-link scroll font-weight-bold" href="index.html#contact">Contact Us</a>
                             </li>
                         </ul>
                     </nav>
@@ -323,11 +323,11 @@
             </div>
         </section>
 
-        <section id="map" class="contact-area ptb_100">
+        <section id="map" class="contact-area">
             <div class="container-fluid">
                 <div class="map-responsive">
                     <iframe
-                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Kottawa+Town,+Pannipitiya"
                         width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
