--- a/pumpkin-jam.html
+++ b/pumpkin-jam.html
@@ -216,7 +216,7 @@
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
                     <img class="navbar-brand-regular mt-4" src="assets/img/logo/king-pumpkin-logo.png" alt="brand-logo"
-                        width="150px">
+                        width="200px">
                     <img class="navbar-brand-sticky" src="assets/img/logo/king-pumpkin-logo.png" alt="sticky brand-logo"
                         width="100px">
                 </a>
@@ -234,18 +234,18 @@
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="index.html">
+                                <a class="nav-link text-dark font-weight-bold" href="index.html">
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="index.html#about">About Us</a>
+                                <a class="nav-link text-dark font-weight-bold" href="index.html#about">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="index.html#products">Products</a>
+                                <a class="nav-link text-dark font-weight-bold" href="index.html#products">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="index.html#contact">Contact</a>
+                                <a class="nav-link text-dark font-weight-bold" href="index.html#contact">Contact Us</a>
                             </li>
                         </ul>
                     </nav>
